src/objects/CRM_Report_Links__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CRM-MC-ESPSFDCQI-1975 - Custom Setting to store link of the CRM  reports</description>
    <fields>
        <fullName>Active_Contacts_Report_URL__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1975 - Field to store URL of the Active Contacts report</description>
        <inlineHelpText>Field to store URL of the Active Contacts report</inlineHelpText>
        <label>Active Contacts Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Report_URL__c</fullName>
        <label>Campaign Member Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Team_Roll_Up_Report__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6200</description>
        <label>Global Account Team Roll Up Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_List_Report_URL__c</fullName>
        <label>Mailing List Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Contacts_Report_URL__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1975 - Field to store URL of the My Contacts report</description>
        <inlineHelpText>Field to store URL of the My Contacts report</inlineHelpText>
        <label>My Contacts Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OWF_Assignment_History_URL__c</fullName>
        <description>OWF-QI-US-2131 - This field is part of the OWF Process</description>
        <label>OWF Assignment History URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities_Report_URL__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1975 - Field to store URL of the Open Opportunities report</description>
        <inlineHelpText>Field to store URL of the Open Opportunities report</inlineHelpText>
        <label>Open Opportunities Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CRM Report Links</label>
</CustomObject>